[gd_scene load_steps=10 format=2]

[ext_resource path="res://2ds sfx gfx/gfx/tombol.png" type="Texture" id=2]
[ext_resource path="res://2ds sfx gfx/gfx/wallpaper.jpg" type="Texture" id=3]
[ext_resource path="res://fonts/ldfcomicsans-font/Ldfcomicsans-jj7l.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://2ds sfx gfx/sfx/cs2d open.wav" type="AudioStream" id=5]
[ext_resource path="res://2ds sfx gfx/sfx/cs2d close.wav" type="AudioStream" id=6]
[ext_resource path="res://main/menu.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 4, 0, 220.953, 39 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1.73333, 44.8444, 223.267, 37.6541 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="singlegame" type="TouchScreenButton" parent="VBoxContainer"]
position = Vector2( 12, -428 )
scale = Vector2( 1.61538, 1.61538 )
normal = SubResource( 1 )
pressed = SubResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/singlegame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Single game"
align = 1
valign = 1

[node name="wifionlinegame" type="TouchScreenButton" parent="VBoxContainer"]
position = Vector2( 12, -349 )
scale = Vector2( 1.61538, 1.61538 )
normal = SubResource( 1 )
pressed = SubResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/wifionlinegame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Wi-Fi / Online game"
align = 1
valign = 1

[node name="mapeditor" type="TouchScreenButton" parent="VBoxContainer"]
position = Vector2( 12, -270 )
scale = Vector2( 1.61538, 1.61538 )
normal = SubResource( 1 )
pressed = SubResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/mapeditor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Map editor"
align = 1
valign = 1

[node name="settings" type="TouchScreenButton" parent="VBoxContainer"]
position = Vector2( 12, -191 )
scale = Vector2( 1.61538, 1.61538 )
normal = SubResource( 1 )
pressed = SubResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Settings"
align = 1
valign = 1

[node name="profile" type="TouchScreenButton" parent="VBoxContainer"]
position = Vector2( 12, -110 )
scale = Vector2( 1.61538, 1.61538 )
normal = SubResource( 1 )
pressed = SubResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/profile"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Profile"
align = 1
valign = 1

[node name="exit" type="TouchScreenButton" parent="VBoxContainer"]
position = Vector2( 10, -31 )
scale = Vector2( 1.61538, 1.61538 )
normal = SubResource( 1 )
pressed = SubResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/exit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Exit"
align = 1
valign = 1

[node name="close" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="released" from="VBoxContainer/singlegame" to="." method="_on_singlegame_released"]
[connection signal="released" from="VBoxContainer/wifionlinegame" to="." method="_on_wifionlinegame_released"]
[connection signal="released" from="VBoxContainer/mapeditor" to="." method="_on_mapeditor_released"]
[connection signal="released" from="VBoxContainer/settings" to="." method="_on_settings_released"]
[connection signal="released" from="VBoxContainer/profile" to="." method="_on_profile_released"]
[connection signal="released" from="VBoxContainer/exit" to="." method="_on_exit_released"]
